--- a/index.html
+++ b/index.html
@@ -7,10 +7,9 @@
 <body>
     <h1>Prograd Contact Book</h1>
     <div id="container">
-        <button id="btnGet">Get User List</button>
+        <button id="btnGet" onclick="data()">Get User List</button>
     </div>
-        <div id="message"></div>
-    <script src="app.js">
-    </script>
+    <div id="message"></div>
+    <script src="app.js"></script>
 </body>
 </html>
